# FGO_NAV

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_INFO.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  README_GP_LSTM_FGO.md  simple_csv_test.cpp  start_navigation.sh  test_csv_reader.cpp
auv_simulation_env/: INSTALL_GUIDE.md  QUICK_START.md  README.md  check_installation.sh  launch_simulation.sh  launch_simulation_headless.sh  setup_environment.sh  stop_simulation.sh
auv_simulation_env/config/: sitl_params.txt
auv_simulation_env/results/: data_analysis_report.json
auv_simulation_env/scripts/: algorithm_test.py  analyze_data.py  data_replay.py  visualize_data.py
gtsam_project/: CMakeLists.txt  README.md  build_and_run.sh  gtsam_api_3d_nav.py
gtsam_project/linshi/: gtsam_3d_nav.py  gtsam_3d_nav_with_velocity.py  gtsam_simu.py
gtsam_project/src/: auv_navigation.cpp  basic_navigation.cpp  simple_navigation.cpp  visualize_trajectory.py
lstm_dvl_training/: GETTING_STARTED.md  README.md  config.py  data_processor.py  evaluate.py  install_dependencies.sh  lstm_model.py  quick_start.py  requirements.txt  train_lstm.py  utils.py
underwater_nav_fgo/: QUICK_START.md
underwater_nav_fgo/config/: time_centric_params.yaml
underwater_nav_fgo/launch/: time_centric_navigation.launch.py
underwater_nav_fgo/scripts/: install_dependencies.sh  install_dependencies_ubuntu20.sh  install_step_by_step.sh  run_complete_comparison.sh  visualize_comparison.py
underwater_nav_fgo/src/data_preprocessing/: CMakeLists.txt  package.xml
underwater_nav_fgo/src/data_preprocessing/include/data_preprocessing/: csv_reader.hpp
underwater_nav_fgo/src/data_preprocessing/src/: csv_reader.cpp
underwater_nav_fgo/src/factor_graph_optimizer/: CMakeLists.txt  package.xml
underwater_nav_fgo/src/factor_graph_optimizer/include/factor_graph_optimizer/: time_centric_fgo.hpp  underwater_fgo.hpp
underwater_nav_fgo/src/factor_graph_optimizer/src/: dvl_factor.cpp  time_centric_methods.cpp  time_centric_navigation_node.cpp  underwater_fgo.cpp
underwater_nav_fgo/src/factor_graph_optimizer/test/: test_underwater_fgo.cpp
underwater_nav_fgo/src/underwater_nav_msgs/: package.xml
underwater_nav_fgo/src/underwater_nav_msgs/msg/: ImuData.msg  NavigationState.msg
underwater_nav_fgo/src/visualization/include/visualization/: trajectory_analyzer.hpp
underwater_nav_ws/: test_csv_player.cpp
underwater_nav_ws/src/underwater_nav_fgo/: CURRENT_STATUS.md  INSTALL_GUIDE.md  README.md  TIME_CENTRIC_README.md
underwater_nav_ws/src/underwater_nav_fgo/config/: system_params.yaml  time_centric_params.yaml
underwater_nav_ws/src/underwater_nav_fgo/launch/: navigation.launch.py
underwater_nav_ws/src/underwater_nav_fgo/scripts/: check_dependencies.sh  compare_methods.py  generate_sample_data.py  quick_comparison.sh  run_tests.sh
underwater_nav_ws/src/underwater_nav_fgo/src/data_preprocessing/: CMakeLists.txt
underwater_nav_ws/src/underwater_nav_fgo/src/data_preprocessing/include/data_preprocessing/: csv_reader.hpp
underwater_nav_ws/src/underwater_nav_fgo/src/data_preprocessing/src/: csv_player_node.cpp  csv_reader.cpp  simple_data_publisher.cpp
underwater_nav_ws/src/underwater_nav_fgo/src/factor_graph_optimizer/: CMakeLists.txt  package.xml
underwater_nav_ws/src/underwater_nav_fgo/src/factor_graph_optimizer/config/: underwater_nav.rviz  underwater_nav_2d.rviz
underwater_nav_ws/src/underwater_nav_fgo/src/factor_graph_optimizer/include/factor_graph_optimizer/: DynamicDvlHandler.h  LSTMPositionFactor.h  dvl_factor.hpp  lever_arm_compensation.hpp  time_centric_factors.hpp  time_centric_fgo.hpp  underwater_fgo.hpp
underwater_nav_ws/src/underwater_nav_fgo/src/factor_graph_optimizer/launch/: underwater_nav_visualization.launch.py
underwater_nav_ws/src/underwater_nav_fgo/src/factor_graph_optimizer/src/: DynamicDvlHandler.cpp  LSTMPositionFactor.cpp  gps_reference_publisher.cpp  lever_arm_compensation.cpp  test_lever_arm.cpp  time_centric_methods.cpp  time_centric_navigation_node.cpp  underwater_fgo.cpp  underwater_navigation_node.cpp  visualization_node.cpp
underwater_nav_ws/src/underwater_nav_fgo/src/state_estimator/: package.xml
underwater_nav_ws/src/underwater_nav_fgo/src/state_estimator/include/state_estimator/: ekf_estimator.hpp
underwater_nav_ws/src/underwater_nav_fgo/src/underwater_nav_msgs/: CMakeLists.txt
underwater_nav_ws/src/underwater_nav_fgo/src/underwater_nav_msgs/msg/: DvlData.msg
underwater_nav_ws/src/underwater_nav_fgo/src/visualization/: package.xml
